--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <artifactId>selenium-server</artifactId>
         <version>3.141.59</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+
 
     </dependencies>
 
